@@ -17,6 +17,8 @@ Revision 0.2.7, released XX-08-2019
   Cryptography Specification, Version 2.1
 - Automatically update the maps for use with openType for RFC3709,
   RFC6402, RFC7191, and RFC8226 when the module is imported
+- Added RFC6211 providing CMS Algorithm Identifier Protection Attribute
+- Added RFC8449 providing Certificate Extension for Hash Of Root Key
 
 Revision 0.2.6, released 31-07-2019
 -----------------------------------
